Still troubleshooting wrong components rendering on delete, think it is an issue with unique keys. Styling of company images changed to not distort when cropped to size.

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -37,6 +37,15 @@ button#delete, button#edit {
   padding: .3rem;
 }
 
+#header, #footer {
+  height: 50px;
+  width: 100%;
+  max-width: 800px;
+  margin: 1rem auto;
+  background-color: #F5F5F5;
+  padding: 1rem;
+}
+
 #company-list {
   width: 100%;
   max-width: 800px;
@@ -62,24 +71,22 @@ button#delete, button#edit {
   box-shadow: 0px 2px 7px -2px rgba(0,0,0,0.1);
 }
 
-#company-row img {
-  position: absolute;
-  max-width: none;
-  margin: -7% -6%;
-}
-
-#header, #footer {
-  height: 50px;
-  width: 100%;
-  max-width: 800px;
-  margin: 1rem auto;
-  background-color: #F5F5F5;
-  padding: 1rem;
-}
-
 #company-image, #company-name {
   float: left;
   clear: both;
+}
+
+#company-image {
+  width: 240px;
+  height: 150px;
+  position: relative;
+  overflow: hidden;
+  margin: -7% -7%;
+}
+
+#company-image img {
+  position: absolute;
+  max-width: 100%;
 }
 
 #company-name {
